--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "vendor/coffee-mode"]
 	path = vendor/coffee-mode
 	url = git://github.com/defunkt/coffee-mode.git
+[submodule "vendor/color-theme-tango2"]
+	path = vendor/color-theme-tango2
+	url = git://github.com/wfarr/color-theme-tango-2.git
