--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "vendor/rhtml"]
 	path = vendor/rhtml
 	url = git://github.com/eschulte/rhtml.git
-[submodule "vendor/color-theme-merbivore"]
-	path = vendor/color-theme-merbivore
-	url = git://github.com/mig/color-theme-merbivore.git
 [submodule "vendor/yasnippets-rails"]
 	path = vendor/yasnippets-rails
 	url = git://github.com/eschulte/yasnippets-rails.git
@@ -13,3 +10,9 @@
 [submodule "vendor/cucumber"]
 	path = vendor/cucumber
 	url = git://github.com/michaelklishin/cucumber.el.git
+[submodule "vendor/coffee-mode"]
+	path = vendor/coffee-mode
+	url = git://github.com/defunkt/coffee-mode.git
+[submodule "vendor/color-theme-tango2"]
+	path = vendor/color-theme-tango2
+	url = git://github.com/wfarr/color-theme-tango-2.git
